syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";

import "protos/router.proto";

service TopologyService {
  rpc OpenRouter(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetRouterStatus(google.protobuf.Empty) returns (GetRouterStatusReply) {}
  rpc CloseRouter(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc UpdateCoordinator(UpdateCoordinatorRequest) returns (google.protobuf.Empty) {}
  rpc GetCoordinator(google.protobuf.Empty) returns (GetCoordinatorResponse) {}
}

message GetRouterStatusReply {
  RouterStatus status = 1;
}

message UpdateCoordinatorRequest {
  string address = 1;
}

message GetCoordinatorResponse {
  string address = 1;
}